<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="10sp"
    android:layout_marginEnd="10sp"
    android:layout_marginTop="10sp"
    android:layout_marginBottom="10sp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_submit"
        android:textColor="@color/black"
        android:layout_marginTop="20sp"
        android:textSize="25sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15sp"
        >

        <Button
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="25dp"
            />
        <Button
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="25dp"
            />

    </LinearLayout>

</LinearLayout>