<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_inquies"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Simple_Inqury">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_fname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/teal_700"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_lname1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_lname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/teal_700"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_mobileno1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_no">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_mobileno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/teal_700"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_email1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/teal_700"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_compnyname1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/company_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_compnyname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/teal_700"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_qtyname1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/qty">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_qtyname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/teal_700"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_message1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/message">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_message"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:backgroundTint="@color/teal_700"
                            android:gravity="top"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/submit_inq"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shapbtn"
                        android:clickable="true"
                        android:cursorVisible="true"
                        android:focusable="true"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        app:neumorph_shapeType="basin"
                        tools:ignore="TextViewEdits" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>